--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
     image: ghcr.io/chroma-core/chroma:latest
     volumes:
       - index_data:/chroma/.chroma/index
+    environment:
+      - IS_PERSISTENT=TRUE
+      - ALLOW_RESET=TRUE
     ports:
       - 8000:8000
     networks:
