--- a/src/ml/.env
+++ b/src/ml/.env
@@ -1,1 +1,2 @@
-API_TOKEN="07b3384e-5dbb-49c8-8f1a-265a1418f0eb"
+FOLDER_ID="b1g8mvm4vfdho6fl7ole"
+API_KEY="AQVNy-2Y671NYKrRd0Ig_MMuKSw5L2DTyohvia6R"
