--- a/src/ml/requirements.txt
+++ b/src/ml/requirements.txt
@@ -2,7 +2,10 @@ fastapi
 pydantic
 uvicorn
 python-dotenv
+langchain_core
 langchain_community
 yandex_chain
 chromadb
 langchain-chroma
+pymupdf
+ocrmypdf
